continuing clean